--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "babel-loader": "^8.0.5",
     "html-webpack-plugin": "^3.2.0",
     "http-proxy": ">=1.18.1",
+    "node-forge": ">=0.10.0",
     "script-ext-html-webpack-plugin": "^2.1.3",
+    "serialize-javascript": "3.1.0",
     "standard": "^14.3.1",
     "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1",
